VTVDA: Handle more missing IDR situations.

This CL reduces the conditions on dropping frames to just
|waiting_for_idr_|. We don't need to consider whether there is a pending
config change (this should be a decode error if we are not waiting) or
whether |session_| is set (|waiting_for_idr_| covers this).

BUG=623892

Review-Url: https://codereview.chromium.org/2101183004
Cr-Commit-Position: refs/heads/master@{#402853}

Former-commit-id: fcd0ee541d7f3f74171f194dcc86cb1672a33139